// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Components - TracksArtistsTemplate Snapshots renders device mobile type artists 1`] = `
<div>
  <div>
    <div
      className="ui green segment"
    >
      <form
        action={undefined}
        className="ui form"
        onSubmit={[Function]}
      >
        <h3
          className="ui header"
        >
          Since
        </h3>
        <div
          className="grouped fields"
        >
          <div
            className="field"
          >
            <div
              className="ui checked radio checkbox"
              onChange={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <input
                checked={true}
                className="hidden"
                id={undefined}
                name="timeRange"
                onClick={[Function]}
                readOnly={true}
                tabIndex={0}
                type="radio"
                value={undefined}
              />
              <label
                htmlFor={undefined}
              >
                last month
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui radio checkbox"
              onChange={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                id={undefined}
                name="timeRange"
                onClick={[Function]}
                readOnly={true}
                tabIndex={0}
                type="radio"
                value={undefined}
              />
              <label
                htmlFor={undefined}
              >
                last six months
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui radio checkbox"
              onChange={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                id={undefined}
                name="timeRange"
                onClick={[Function]}
                readOnly={true}
                tabIndex={0}
                type="radio"
                value={undefined}
              />
              <label
                htmlFor={undefined}
              >
                beginning of times
              </label>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      className="ui basic segment"
    >
      <div
        className="ui grid"
      />
    </div>
  </div>
</div>
`;

exports[`App Components - TracksArtistsTemplate Snapshots renders device mobile type tracks 1`] = `
<div>
  <div>
    <div
      className="ui green segment"
    >
      <form
        action={undefined}
        className="ui form"
        onSubmit={[Function]}
      >
        <h3
          className="ui header"
        >
          Since
        </h3>
        <div
          className="grouped fields"
        >
          <div
            className="field"
          >
            <div
              className="ui checked radio checkbox"
              onChange={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <input
                checked={true}
                className="hidden"
                id={undefined}
                name="timeRange"
                onClick={[Function]}
                readOnly={true}
                tabIndex={0}
                type="radio"
                value={undefined}
              />
              <label
                htmlFor={undefined}
              >
                last month
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui radio checkbox"
              onChange={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                id={undefined}
                name="timeRange"
                onClick={[Function]}
                readOnly={true}
                tabIndex={0}
                type="radio"
                value={undefined}
              />
              <label
                htmlFor={undefined}
              >
                last six months
              </label>
            </div>
          </div>
          <div
            className="field"
          >
            <div
              className="ui radio checkbox"
              onChange={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
            >
              <input
                checked={false}
                className="hidden"
                id={undefined}
                name="timeRange"
                onClick={[Function]}
                readOnly={true}
                tabIndex={0}
                type="radio"
                value={undefined}
              />
              <label
                htmlFor={undefined}
              >
                beginning of times
              </label>
            </div>
          </div>
        </div>
      </form>
    </div>
    <div
      className="ui basic segment"
    >
      <div
        className="ui grid"
      />
    </div>
  </div>
</div>
`;

exports[`App Components - TracksArtistsTemplate Snapshots renders device no mobile type artists 1`] = `
<div>
  <div
    className="ui two column grid"
  >
    <div
      className="four wide column"
    >
      <div
        className="ui green segment"
      >
        <form
          action={undefined}
          className="ui form"
          onSubmit={[Function]}
        >
          <h3
            className="ui header"
          >
            Since
          </h3>
          <div
            className="grouped fields"
          >
            <div
              className="field"
            >
              <div
                className="ui checked radio checkbox"
                onChange={[Function]}
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                <input
                  checked={true}
                  className="hidden"
                  id={undefined}
                  name="timeRange"
                  onClick={[Function]}
                  readOnly={true}
                  tabIndex={0}
                  type="radio"
                  value={undefined}
                />
                <label
                  htmlFor={undefined}
                >
                  last month
                </label>
              </div>
            </div>
            <div
              className="field"
            >
              <div
                className="ui radio checkbox"
                onChange={[Function]}
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                <input
                  checked={false}
                  className="hidden"
                  id={undefined}
                  name="timeRange"
                  onClick={[Function]}
                  readOnly={true}
                  tabIndex={0}
                  type="radio"
                  value={undefined}
                />
                <label
                  htmlFor={undefined}
                >
                  last six months
                </label>
              </div>
            </div>
            <div
              className="field"
            >
              <div
                className="ui radio checkbox"
                onChange={[Function]}
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                <input
                  checked={false}
                  className="hidden"
                  id={undefined}
                  name="timeRange"
                  onClick={[Function]}
                  readOnly={true}
                  tabIndex={0}
                  type="radio"
                  value={undefined}
                />
                <label
                  htmlFor={undefined}
                >
                  beginning of times
                </label>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      className="twelve wide column"
    >
      <div
        className="ui basic segment"
      >
        <div
          className="ui grid"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`App Components - TracksArtistsTemplate Snapshots renders device no mobile type tracks 1`] = `
<div>
  <div
    className="ui two column grid"
  >
    <div
      className="four wide column"
    >
      <div
        className="ui green segment"
      >
        <form
          action={undefined}
          className="ui form"
          onSubmit={[Function]}
        >
          <h3
            className="ui header"
          >
            Since
          </h3>
          <div
            className="grouped fields"
          >
            <div
              className="field"
            >
              <div
                className="ui checked radio checkbox"
                onChange={[Function]}
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                <input
                  checked={true}
                  className="hidden"
                  id={undefined}
                  name="timeRange"
                  onClick={[Function]}
                  readOnly={true}
                  tabIndex={0}
                  type="radio"
                  value={undefined}
                />
                <label
                  htmlFor={undefined}
                >
                  last month
                </label>
              </div>
            </div>
            <div
              className="field"
            >
              <div
                className="ui radio checkbox"
                onChange={[Function]}
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                <input
                  checked={false}
                  className="hidden"
                  id={undefined}
                  name="timeRange"
                  onClick={[Function]}
                  readOnly={true}
                  tabIndex={0}
                  type="radio"
                  value={undefined}
                />
                <label
                  htmlFor={undefined}
                >
                  last six months
                </label>
              </div>
            </div>
            <div
              className="field"
            >
              <div
                className="ui radio checkbox"
                onChange={[Function]}
                onClick={[Function]}
                onMouseDown={[Function]}
              >
                <input
                  checked={false}
                  className="hidden"
                  id={undefined}
                  name="timeRange"
                  onClick={[Function]}
                  readOnly={true}
                  tabIndex={0}
                  type="radio"
                  value={undefined}
                />
                <label
                  htmlFor={undefined}
                >
                  beginning of times
                </label>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
    <div
      className="twelve wide column"
    >
      <div
        className="ui basic segment"
      >
        <div
          className="ui grid"
        />
      </div>
    </div>
  </div>
</div>
`;
